# logger_v2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/logger/: config.py  custom_logger.py  logger.py
tests/: test_logger.py
tests/test_logger/: test_config.py  test_custom_logger.py
