[project]
name = "logger"
version = "0.1.0"
description = "A rewrite of the logger portion of the rdata monorepo"
authors = [
    {name = "simon-lentz",email = "simon@wyrth.io"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "logger", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"
deptry = "^0.23.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
